test/valid/Logic/Nor.plume
/**
 * Class to calculate the logical Nor operation
 * @author 35237, Marcos Vasco
 */
class Nor extends BinaryLogicalOperation is
  
  method override calculate : (val1 : Boolean, val2 : Boolean) -> Boolean is
    if val1 == false && val2 == false then true
    else false